# EFMdemo

./: .gitignore  LICENSE.md  Makefile.am  README.build  README.md  configure.ac  efmdemo.spec
share/: Makefile.am
share/efm/: Makefile.am
share/efm/aws/script/: Makefile.am
share/efm/gcp/script/: Makefile.am  efm-post-promotion.sh  efm-remote-post-promotion.sh
share/efm/local/script/: Makefile.am  efm-notify.sh  efm-post-promotion.sh  efm-remote-post-promotion.sh
share/examples/: 1.jq  aws.sh  efm-service.override  jq
share/man/man1/: Makefile.am  efmpath.1  getbasebackup.1  getnodes.1  getprop.1  setprop.1
share/pki/: ExampleRoot.cer  Makefile.am  README  install.sh
share/pki/servers/: Makefile.am  decrypt.sh  password.txt  s1.crt  s1.key  s1.prv  s2.crt  s2.key  s2.prv  s3.crt  s3.key  s3.prv  s4.crt  s4.key  s4.prv  w1.crt  w1.key  w1.prv
